welcome.lessons.welcome.loopwhile.LoopWhile.scala.error
Program:1: error: identifier expected but 'false' found.
while (estFaceMur():false) {
                    ^Program:5: error: ')' expected but '}' found.
	}
        ^